# smartcast

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: build.yml  clippy.yml
src/: commands.rs  constant.rs  device.rs  discover.rs  error.rs  lib.rs  pair.rs
src/device/: apps.rs  command.rs  info.rs  input.rs  mod.rs  remote.rs  response.rs  setting.rs  settings.rs
tests/: dev_types.rs  emulated.rs  local.rs  pairing.rs  ports.rs  power_input.rs  simulated.rs
tests/support/: device_state.rs  info.rs  macros.rs  mod.rs  pairing.rs
tests/support/emulated_device/: commands.rs  inputs.rs  mod.rs
tests/support/simulated_device/: commands.rs  inputs.rs  mod.rs  settings.rs
