[package]
name = "smartcast"
version = "0.1.0"
description = "API to connect and control Vizio SmartCast devices"
repository = "https://github.com/ConnorTroy/smartcast"
readme = "README.md"
license = "MIT"
authors = ["Connor Troy <connor.troy@tuta.io>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.4", features = ["native-tls"] }
httparse = "1.4.1"
regex = "1.5.4"
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1.7.1", features = ["rt", "macros"] }
