[package]
name = "smartcast"
version = "0.1.0"
description = "API to connect and control Vizio SmartCast devices"
categories = ["api-bindings"]
keywords = ["home-automation", "smart-home", "smart-tv", "soundbar"]
repository = "https://github.com/ConnorTroy/smartcast"
readme = "README.md"
license = "MIT"
authors = ["Connor Troy <connor.troy@tuta.io>"]
edition = "2018"

[dependencies]
log = "0.4.14"
reqwest = { version = "0.11.4", features = ["native-tls", "json"] }
httparse = "1.4.1"
regex = "1.5.4"
serde_json = "1.0.64"
serde-xml-rs = "0.4.1"
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1.9.0", default-features = false, features = ["macros", "net"] }
async-trait = "0.1.51"

[dev-dependencies]
pretty_env_logger = "0.4.0"
indoc = "1.0.3"
chrono = "0.4.19"
rand = "0.8.4"
warp = { version = "0.3.1", features = ["tls"] }
http = "0.2.4"
rcgen = "0.8.11"
